# KF-and-EKF

./: README.md
EKF/: CMakeLists.txt  extended_kalman_filter.hpp  main.cpp  test.cpp
EKF_python/ExtendedKalmanFilter/: AngleIntegral.py
common_KF/: CMakeLists.txt  data.cpp  kalman_filter.hpp  main.cpp
common_KF/data_script/: data_create.py  file.txt
